--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
- 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    border: solid 5px black;
+    width: 500px;
+    height: 500px;
+    padding: 0;
+    margin: 0;
+ }
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: calc(500px/3);
+    height: calc(500px/3);
+}
